# 86Box-voodoo-arm64

./: .gitignore  CHANGELOG-wchar-removal.md  CMakeLists.txt  CONTRIBUTING.md  PLAN-wchar-removal-full.md  PLAN-wchar-removal-remaining.md  README.md  README2.md  SUMMARY-wchar-removal.md
.claude/agents/: vc-arch.md  vc-debug.md  vc-lead.md  vc-plumbing.md  vc-shader.md
appimage/: AppImageBuilder.yml  Dockerfile  README.md  build-appimage.sh
cpu-arm64-opts/: CHANGELOG.md  README.md  aliasing-audit.md  analysis.md  arch-research.md  checklist.md  compat-audit.md  cross-validation.md  impl-review.md  plan.md  refactoring-r1-r7.md  validation-report.md  validation.md
cpu-dynarec-plan/: CHANGELOG.md  EXECUTIVE-SUMMARY.md  PHASES.md  PLAN.md  STATUS.md  phase4-retry-plan.md
cpu-dynarec-plan/research/: arm64-backend-audit.md  block-linking.md  correctness-audit.md  instruction-coverage.md  other-dynarecs.md  prior-work.md  uop-catalog.md
docs/: 2026-03-12-voodoo-gap-closure-executive-summary.md  2026-03-12-voodoo-known-bug-candidates.md  2026-03-13-arm64-voodoo-optimization-changelog.md  2026-03-13-arm64-voodoo-optimization-executive-summary.md  README.md  arm64-3dnow-authoritative-notes.md  arm64-3dnow-bringup-plan.md  arm64-3dnow-continuation-plan.md  arm64-3dnow-findings-and-emu-speed-port-plan.md  arm64-3dnow-opcode-coverage-tracker.md  arm64-3dnow-overview.md  arm64-and-pacing-build-and-cleanup-plan.md  arm64-and-pacing-upstream-sync-and-clean-plan.md  arm64-dynarec-branch-overview.md  arm64-dynarec-investigation.md  arm64-dynarec-phase-marker-baseline-protocol.md  arm64-dynarec-wave1-implementation-plan.md  arm64-throughput-campaign-plan.md  arm64-voodoo-optimization-investigation.md  branch-diary-ndr-pacing-lab.md  interaction-drop-investigation-plan.md  ndr-pacing-scheduling-analysis.md  regular-x87-performance-deep-dive.md  upstream-sync-dev-branch-playbook.md  upstream-sync-workflow.md  voodoo-deep-dive-findings-2026-03-12.md
docs/plans/: 2026-03-07-bp6-secondary-ide.md  2026-03-08-0f-af-strict-trial-plan.md  2026-03-08-3dnow-final-coverage-batch.md  2026-03-08-rep-softfloat-gap-measurement.md  2026-03-09-guest-regression-planning-reset.md  2026-03-09-i686-opportunity-review.md  2026-03-09-next-session-cmps-prompt.md  2026-03-09-next-session-scas-prompt.md  2026-03-09-post-scas-opportunity-rerank.md  2026-03-09-sahf-lahf-audit.md  2026-03-10-voodoo4-recovery-plan.md  2026-03-12-voodoo-gap-and-bug-closure.md  2026-03-13-arm64-voodoo-optimization-central-plan.md  new-dynarec-changelog.md  new-dynarec-executive-summary.md  new-dynarec-investigation.md  new-dynarec-optimization-overview.md  voodoo4-next-session-prompt.md  voodoo4-recovery-plan.md
docs/research/: voodoo4-banshee-correlation.md  voodoo4-index.md  voodoo4-open-questions.md  voodoo4-rom-analysis.md
docs/status/: voodoo4-changelog.md  voodoo4-executive-summary.md  voodoo4-tracker.md
riva128-nv3-plan/: CHANGELOG.md  RESUME-PROMPT.md  STATUS.md  checklist.md  implementation-plan.md  reference-links.md
scripts/: analyze-jit-log.c  setup-and-build-rosetta-x86_64.sh  switch-project.sh  sync-upstream.sh  test-voodoo4-blank-boundary.sh  test-voodoo4-memory-config.sh  test-with-vm.sh
scripts/dynarec/: analyze-emu-speed-log.sh  analyze-s03a-log.c  analyze-s03a-log.sh  finalize-s03-log.sh  launch-vm-telemetry-run.sh  prepare-vm-telemetry-run.sh
secretproject/: CHANGELOG.md  PLAN.md  STATUS.md  analyze_smp_log.sh  capture_bp6_trial.sh  check_bp6_dual_halt_deadlock.sh  feasibility-study.md  run_bp6_smp_reset_test.sh  test_capture_bp6_trial.sh
src/: 86box.c  CMakeLists.txt  config.c  device.c  ioapic.c  nvr_at.c  pic.c  pit.c  vnc.c
src/cdrom/: cdrom.c  cdrom_image_viso.c
src/chipset/: intel_piix.c
src/codegen_new/: CMakeLists.txt  codegen.c  codegen.h  codegen_allocator.c  codegen_allocator.h  codegen_backend_arm64.c  codegen_backend_arm64.h  codegen_backend_arm64_ops.c  codegen_backend_arm64_ops.h  codegen_backend_arm64_uops.c  codegen_backend_x86-64.c  codegen_backend_x86-64_uops.c  codegen_block.c  codegen_ir.c  codegen_ir.h  codegen_ir_defs.h  codegen_observability.c  codegen_ops.c  codegen_ops.h  codegen_ops_3dnow.c  codegen_ops_3dnow.h  codegen_ops_arith.c  codegen_ops_arith.h  codegen_ops_bit.c  codegen_ops_bit.h  codegen_ops_branch.c  codegen_ops_branch.h  codegen_ops_cmov.c  codegen_ops_cmov.h  codegen_ops_fpu_constant.c  codegen_ops_fpu_constant.h  codegen_ops_fpu_misc.c  codegen_ops_fpu_misc.h  codegen_ops_jump.c  codegen_ops_jump.h  codegen_ops_misc.c  codegen_ops_misc.h  codegen_ops_mul.c  codegen_ops_mul.h  codegen_ops_shift.c  (+7 more)
src/cpu/: 386.c  386_common.h  386_dynarec.c  CMakeLists.txt  apic.c  codegen_public.h  cpu.c  cpu.h  smp.h  x86.c  x86_ops_3dnow.h  x86_ops_misc.h  x86seg.c  x86seg.h
src/disk/: hdc_ide.c  hdd.c
src/video/videocommon/: CMakeLists.txt  vc_batch.c  vc_batch.h  vc_core.c  vc_core.h  vc_display.c  vc_display.h  vc_gpu_state.h  vc_internal.h  vc_macos_surface.m  vc_pipeline.c  vc_pipeline.h  vc_readback.c  vc_readback.h  vc_render_pass.c  vc_render_pass.h  vc_shader.c  vc_shader.h  vc_texture.c  vc_texture.h  vc_thread.c  vc_thread.h  vc_vma_impl.cpp
src/video/videocommon/cmake/: CompileShader.cmake  SpvToHeader.cmake
src/video/videocommon/shaders/: postprocess.frag  postprocess.vert  voodoo_uber.frag  voodoo_uber.frag.spv  voodoo_uber.vert
tests/: codegen_new_0f_semantics_test.c  codegen_new_allocator_pressure_policy_test.c  codegen_new_dynarec_observability_test.c  codegen_new_opcode_coverage_policy_test.c  mem_evict_list_test.c
videocommon-plan/: CHANGELOG.md  DESIGN.md  LESSONS.md  PHASES.md  STATUS.md
voodoo-arm64-port/: AGENTS.md  ARM64-CODEGEN-TECHNICAL.md  CHANGELOG.md  TESTING-GUIDE.md  VOODOO4-CHANGELOG.md  VOODOO4-PLAN.md  VOODOO4-SESSION-HANDOFF.md  VSA100-DISPLAY-PIPELINE.md  VSA100-REGISTER-REFERENCE.md  accuracy-audit-findings.md  batch7-audit.md  final-validation-log.txt  linux-arm64-build-guide.md  optimization-audit-round2.md  optimization-plan.md  optimization-summary.md  perf-optimization-report.md  verify-mismatch-analysis.md
(+154 files in other folders)
